styles/styles.css
/* ... */
.navbar-brand {
  width: 20%;
}

.navbar-brand img {
  width: 100%;
}

.nav-item {
  font-size: 1.3rem;
}

.header-background,
header div {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

h1 {
  font-family: "sfHeavy";
  color: var(--offWhite);
  font-size: 7rem;
  margin-bottom: 0;
  line-height: 5rem;
  opacity: 0;
}

.heading-container {
  position: absolute;
  z-index: 3;
  top: 25%;
  right: 7%;
  width: fit-content;
  opacity: 1;
  transition: opacity 0.2s ease-in;
}

.heading-container .animate__animated {
  opacity: 1;
}

.heading-subtitle {
  opacity: 0;
  color: var(--offWhite);
  width: 95%;
  margin: 0 auto;
  font-size: 2.3em;
  text-transform: uppercase;
  display: flex;
  justify-content: space-between;
}
/* SECTION MISSION */
#section-mission {
  background: URL("../assets/img/fondo-mision.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  padding: 10rem 0 10rem 0;
}
/* .splide {
  background: rgb(10, 172, 208);
  background: url("../assets/img/background-logo.png"),
    linear-gradient(90deg, rgba(10, 172, 208, 1) 0%, rgb(55, 117, 193) 100%);
  background-size: cover cover;
  background-repeat: no-repeat repeat;
} */

#splide01-track {
  padding: 0;
  margin: 5rem auto 0 auto;
  width: 100%;
  height: 70vh;
  background: rgb(10, 172, 208);
  background: url("../assets/img/background-logo.png"),
    linear-gradient(90deg, rgba(10, 172, 208, 1) 0%, rgba(38, 92, 158, 1) 100%);
  background-size: cover cover;
  background-repeat: no-repeat repeat;
}

.splide__slide img {
  object-fit: contain;
  object-position: top;
  height: 100%;
  width: 80%;
  margin: 0 auto;
}

.splide__slide {
  filter: blur(3px);
}

.splide__slide.is-active {
  filter: none;
}

.mission-container {
  max-width: 50%;
  margin-left: auto;
  padding-right: 20rem;
}
.mission-container h2 {
  font-size: 2.5em;
}

.mission-container p {
  font-size: 1.4em;
}

.mision-flecha {
  position: absolute;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  height: 80%;
  width: auto;
}

.socials {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  height: 40%;
  width: 4%;
  background: rgb(77, 151, 187);
  background: linear-gradient(
    90deg,
    rgba(77, 150, 187, 0.765) 0%,
    rgba(30, 61, 110, 0.786) 96%
  );
  border-top-right-radius: 1rem;
  border-bottom-right-radius: 1rem;
  padding: 1rem 0;
}
.social {
  padding: 0.3rem 0;
  width: 60%;
  margin: 0 auto;
  height: 100%;
  object-fit: contain;
}

/* SECTION OBJECTIVES */
#section-objectives {
  background-color: red;
  background: url("../assets/img/fondo-objetivos.webp");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  padding: 5rem 0;
}

#section-objectives h2 {
  margin-bottom: 8rem;
  color: #fff;
  text-transform: uppercase;
  font-family: "sfLight";
}

.objective {
  flex: 1;
  margin: 0 2rem;
}

.objective img {
  width: 45%;
  margin-bottom: 4rem;
}

.objective p {
  text-align: center;
  color: #fff;
  font-size: 1.2rem;
}

/* SECTION PLANS */
#section-plans {
  padding: 7rem 0 5rem 0;
}

#section-plans h2 {
  font-family: "sfLight";
  text-transform: uppercase;
  margin-bottom: 1rem;
}

.background-arrow {
  position: absolute;
  top: 50%;
  width: 5%;
}

.background-arrow:nth-child(2) {
  right: 0;
  transform: translateY(-50%);
}

.background-arrow:nth-child(1) {
  left: 0;
  transform: rotate(180deg) translateY(50%);
}
.plans-container {
  width: 75%;
  margin: 0 auto;
  margin-top: 2rem;
}
.plan {
  flex: 1;
  margin: 0 0.8rem;
  box-shadow: 1px 1px 15px rgb(206, 206, 206);
  transition: all 0.2s ease-in;
  cursor: pointer;
}

.plan:hover {
  transform: scale(1.1);
  /* transform-origin: top; */
}

.plan-image-container {
  min-height: 15rem;
  width: 100%;
  clip-path: polygon(
    0% 15%,
    0 0,
    15% 0%,
    85% 0%,
    100% 0,
    100% 15%,
    100% 94%,
    87% 94%,
    80% 100%,
    73% 94%,
    15% 94%,
    0 94%
  );
}

.plan img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.plan-image-container {
  height: 15rem;
}

.plan-1 .plan-image-container {
  background: url("../assets/img/plan-1.webp");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.plan-2 .plan-image-container {
  background: url("../assets/img/plan-2.webp");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.plan-3 .plan-image-container {
  background: url("../assets/img/plan-3.webp");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.plan-4 .plan-image-container {
  background: url("../assets/img/plan-4.webp");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.plan-5 .plan-image-container {
  background: url("../assets/img/plan-5.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.plan h3 {
  position: absolute;
  bottom: 6%;
  left: 0;
  z-index: 3;
  color: #fff;
  text-transform: uppercase;
  font-family: "sfBold";
  font-size: 1.7em;
  padding-left: 0.7rem;
}

.overlay-primary {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: var(--secondaryOverlay);
  bottom: 0;
  left: 0;
  z-index: 2;
}

.overlay-secondary {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: var(--primaryOverlay);
  bottom: 0;
  left: 0;
  z-index: 2;
}

.plan-price {
  color: var(--secondary);
  font-family: "sfHeavy";
  font-size: 2.7em;
  margin-bottom: 0;
}

.monthly-price {
  width: 100%;
  color: var(--secondary);
  font-size: 1.4em;
  font-family: "sfBold";
  line-height: 25px;
  padding: 0 0 0.8rem 0.8rem;
  margin: 0;
}

.modal-content {
  border-radius: 2rem;
  background: var(--offWhite);
}

.modal-header {
  border-bottom: none;
  padding-bottom: 0;
}

.modal-footer {
  border-top: none;
}
/* ... */

